Fixed too small margins in mobile view
It was not that close to the mockup image.

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ h2 {
 @media (max-width: 767px) {
 
   #chicken-block {
-    margin-left: 30px ;
-    margin-right: 30px ;
+    margin-left: 60px ;
+    margin-right: 60px ;
   }
 }
